--- a/Areas/Admin/Views/Orders/Details.cshtml
+++ b/Areas/Admin/Views/Orders/Details.cshtml
@@ -36,11 +36,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.AddressDelivery)
+            @Html.DisplayNameFor(model => model.ShippingAddress)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.AddressDelivery)
+            @Html.DisplayFor(model => model.ShippingAddress)
         </dd>
 
         <dt>
