--- a/Areas/Admin/Views/Orders/Index.cshtml
+++ b/Areas/Admin/Views/Orders/Index.cshtml
@@ -22,7 +22,7 @@
             @Html.DisplayNameFor(model => model.PaymentStatus)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.AddressDelivery)
+            @Html.DisplayNameFor(model => model.ShippingAddress)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Customer.CustomerName)
@@ -42,7 +42,7 @@
             @Html.DisplayFor(modelItem => item.PaymentStatus)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.AddressDelivery)
+            @Html.DisplayFor(modelItem => item.ShippingAddress)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Customer.CustomerName)
