--- a/Areas/Admin/Views/Orders/Create.cshtml
+++ b/Areas/Admin/Views/Orders/Create.cshtml
@@ -48,10 +48,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AddressDelivery, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ShippingAddress, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.AddressDelivery, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AddressDelivery, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.ShippingAddress, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ShippingAddress, "", new { @class = "text-danger" })
             </div>
         </div>
 
