--- a/Views/Order/Details.cshtml
+++ b/Views/Order/Details.cshtml
@@ -75,7 +75,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <p><strong>Địa chỉ giao hàng:</strong></p>
-                            <p class="text-muted">@Model.AddressDelivery</p>
+                            <p class="text-muted">@Model.ShippingAddress</p>
                         </div>
                         <div class="col-md-6">
                             <p><strong>Phương thức thanh toán:</strong></p>
