--- a/Views/Order/MyOrder.cshtml
+++ b/Views/Order/MyOrder.cshtml
@@ -111,7 +111,7 @@
                                         </div>
                                         <div class="mb-3">
                                             <small class="text-muted">Địa chỉ:</small>
-                                            <div class="small">@(order.AddressDelivery.Length > 50 ? order.AddressDelivery.Substring(0, 50) + "..." : order.AddressDelivery)</div>
+                                            <div class="small">@(order.ShippingAddress.Length > 50 ? order.ShippingAddress.Substring(0, 50) + "..." : order.ShippingAddress)</div>
                                         </div>
                                         <a href="@Url.Action("Details", "Order", new { id = order.OrderID })" class="btn btn-outline-primary btn-sm w-100">
                                             <i class="bi bi-eye"></i> Xem Chi Tiết
