--- a/Views/Order/OrderSuccess.cshtml
+++ b/Views/Order/OrderSuccess.cshtml
@@ -38,7 +38,7 @@
 
                     <div class="mb-3">
                         <p><strong>Địa chỉ giao hàng:</strong></p>
-                        <p class="text-muted">@Model.AddressDelivery</p>
+                        <p class="text-muted">@Model.ShippingAddress</p>
                     </div>
                 </div>
             </div>
