--- a/Areas/Admin/Views/Users/Index.cshtml
+++ b/Areas/Admin/Views/Users/Index.cshtml
@@ -1,28 +1,31 @@
 ﻿@model IEnumerable<_22DH114699_LTW.Models.User>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Users Management";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Users Management</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-primary" })
 </p>
-<table class="table">
+<table class="table table-striped table-bordered">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Password)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UserRole)
-        </th>
-        <th></th>
+        <th>Username</th>
+        <th>Password</th>
+        <th>User Role</th>
+        <th>Customer Name</th>
+        <th>Customer Email</th>
+        <th>Customer Phone</th>
+        <th>Actions</th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Username)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.Password)
         </td>
@@ -30,9 +33,39 @@
             @Html.DisplayFor(modelItem => item.UserRole)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Username }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Username }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Username })
+            @if (item.Customers != null && item.Customers.Any())
+            {
+                @Html.DisplayFor(modelItem => item.Customers.FirstOrDefault().CustomerName)
+            }
+            else
+            {
+                <span class="text-muted">N/A</span>
+            }
+        </td>
+        <td>
+            @if (item.Customers != null && item.Customers.Any())
+            {
+                @Html.DisplayFor(modelItem => item.Customers.FirstOrDefault().CustomerEmail)
+            }
+            else
+            {
+                <span class="text-muted">N/A</span>
+            }
+        </td>
+        <td>
+            @if (item.Customers != null && item.Customers.Any())
+            {
+                @Html.DisplayFor(modelItem => item.Customers.FirstOrDefault().CustomerPhone)
+            }
+            else
+            {
+                <span class="text-muted">N/A</span>
+            }
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id=item.Username }, new { @class = "btn btn-sm btn-warning" }) 
+            @Html.ActionLink("Details", "Details", new { id=item.Username }, new { @class = "btn btn-sm btn-info" }) 
+            @Html.ActionLink("Delete", "Delete", new { id=item.Username }, new { @class = "btn btn-sm btn-danger" })
         </td>
     </tr>
 }
